# SNEKE

./: CMakeCache.txt  CMakeLists.txt  Entity.cpp  Entity.hpp  Food.cpp  Food.hpp  FoodFactory.cpp  FoodFactory.hpp  Makefile  cmake_install.cmake  iGUI.cpp  iGUI.hpp  install.sh  libBasicRender.dylib  main.cpp  nibbler  snake.cpp  snake.hpp  snakePart.cpp  snakePart.hpp  test.cpp  window.cpp  window.hpp
GUILib1/: CMakeCache.txt  CMakeLists.txt  Makefile  SDL.cpp  SDL.hpp  cmake_install.cmake  libBasicRender.dylib
GUILib2/: CMakeLists.txt  Makefile  SDL.cpp  SDL.hpp  cmake_install.cmake  libBasicRender2.dylib
GUILib3/: CMakeCache.txt  CMakeLists.txt  Makefile  SDL.cpp  SDL.hpp
SDL-Lib/: render.cpp  render.hpp  window.cpp  window.hpp
